--- a/HistoGlobe_client/style/modules/control_buttons/control_button_area.less
+++ b/HistoGlobe_client/style/modules/control_buttons/control_button_area.less
@@ -1,20 +1,15 @@
 .control-buttons {
   position: absolute;
   bottom: 100px;
-  //padding-top: 20px;
-  left: 15px;
+  left: 15px !important;
 
   .transition-property(left);
   .transition-duration(@sidebar_aimation_speed);
 
 
   .control-buttons-group {
-    //box-shadow: 0 0 @shadow_radius rgba(0,0,0,@shadow_intensity);
     margin: 5px 5px 5px 0;
     font-size: 30pt * @widget_font_size_factor;
-    //border-radius: @widget_border_radius_top_left @widget_border_radius_top_right @widget_border_radius_bottom_right @widget_border_radius_bottom_left;
-    //padding: @border_width;
-    // background-color: @border_color;
 
     .control-buttons-button {
       width: 40px;
@@ -28,20 +23,6 @@
 
       cursor: pointer;
       text-align: center;
-
-      &:first-child {
-        //border-top-left-radius: @widget_border_radius_top_left;
-        //border-top-right-radius: @widget_border_radius_top_right;
-      }
-
-      &:last-child {
-        //border-bottom-right-radius: @widget_border_radius_bottom_right;
-        //border-bottom-left-radius: @widget_border_radius_bottom_left;
-      }
-
-      &:hover {
-        //background-color: lighten(@widget_title_background_color, 20%);
-      }
     }
   }
 }
@@ -49,6 +30,47 @@
 .highContrast .control-buttons {
   .control-buttons-group {
     .control-buttons-button {
+      background-color: #ece791;
+      color: #000000;
+      border: solid 1px #131f29;
+    }
+  }
+}
+
+
+// EDIT BUTTONS
+
+.edit-buttons {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+
+  .edit-buttons-group {
+    float: left;
+    margin: 5px 5px 5px 10px;
+    font-size: 30pt * @widget_font_size_factor;
+
+    .edit-buttons-button {
+      float: left;
+      margin-left: 5px;
+      width: 40px;
+      height: 40px;
+      border-radius: 20px;
+      background-color: #d5c900;
+      color: #fff;
+      text-shadow: 0px 0px 3px rgba(0,0,0,0.3);
+      padding: 4px;
+      margin-bottom: 8px;
+
+      cursor: pointer;
+      text-align: center;
+    }
+  }
+}
+
+.highContrast .edit-buttons {
+  .edit-buttons-group {
+    .edit-buttons-button {
       background-color: #ece791;
       color: #000000;
       border: solid 1px #131f29;
