--- a/HistoGlobe_client/style/modules/control_buttons/control_button_area.less
+++ b/HistoGlobe_client/style/modules/control_buttons/control_button_area.less
@@ -64,6 +64,7 @@
 
       cursor: pointer;
       text-align: center;
+
     }
   }
 }
@@ -76,4 +77,13 @@
       border: solid 1px #131f29;
     }
   }
+}
+
+.own-button
+{
+  width: 100%;
+  height: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 90% auto;
 }
