finished buttons and operations controller, now starting design of operations window

--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -5,10 +5,11 @@
 @import "areas/areas.less";
 @import "globe/globe.less";
 @import "watermark/watermark.less";
-@import "control_buttons/control_buttons.less";
+@import "buttons/control_buttons.less";
 @import "help/help.less";
 @import "utils/bootstrap_overides.less";
 @import "utils/gallery.less";
 @import "search_box/search_box.less";
 @import "hivent_list/hivent_list.less";
 @import "imprint/imprint.less";
+@import "edit_operations/edit_operation_window.less";
