--- a/HistoGlobe_client/style/modules/buttons/control_buttons.less
+++ b/HistoGlobe_client/style/modules/buttons/control_buttons.less
@@ -15,7 +15,6 @@
 .buttons-group
 {
   margin: 5px 5px 5px 0;
-  font-size: 30pt * @widget_font_size_factor;
 }
 
 .buttons-group-horizontal
@@ -26,16 +25,17 @@
 
 .button
 {
-  width: 40px;
-  height: 40px;
-  border-radius: 20px;
-  background-color: #d5c900;
+  width: @button_diameter;
+  height: @button_diameter;
+  border-radius: @button_diameter*0.5;
+  background-color: @color_highlight;
+  font-size: @button_diameter * @widget_font_size_factor;
+  text-align: center;
   color: #fff;
   text-shadow: 0px 0px 3px rgba(0,0,0,0.3);
   padding: 4px;
   margin-bottom: 8px;
   cursor: pointer;
-  text-align: center;
 }
 
 .button-horizontal
