finished basic structure and title of edit operation window - now work flow

--- a/HistoGlobe_client/style/modules/edit_operations/edit_operation_window.less
+++ b/HistoGlobe_client/style/modules/edit_operations/edit_operation_window.less
@@ -26,8 +26,8 @@
   background-color: @color_bg_medium;
   font-size: @operation_workflow_size;
   color: @color_bg_white;
-  line-height: @operation_workflow_height;   /* vertical centering */
   text-align: center;
+  vertical-align: bottom;
 }
 
 #operation-content
