created generic button class, started implementing work flow in operations, now visualization

--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -6,6 +6,7 @@
 @import "globe/globe.less";
 @import "watermark/watermark.less";
 @import "buttons/control_buttons.less";
+@import "buttons/button.less";
 @import "help/help.less";
 @import "utils/bootstrap_overides.less";
 @import "utils/gallery.less";
