hg instance button now an object not a list - much more usable

--- a/HistoGlobe_client/style/modules/edit_operations/edit_operation_window.less
+++ b/HistoGlobe_client/style/modules/edit_operations/edit_operation_window.less
@@ -44,16 +44,16 @@
   height: 100%;
 }
 
-#back-button, #next-button
+#backButton, #nextButton
 {
   position: absolute;
   top: (@operation_workflow_height + @operation_title_height) * 0.5; /* random magic factor */
 }
-#back-button
+#backButton
 {
   left: -@button_diameter - 10px;
 }
-#next-button
+#nextButton
 {
   right: -@button_diameter - 10px;
 }
