restructured button mechanism. Now each button is a HG.Button an inside an HG.ButtonArea. Simpler to create a button.

--- a/HistoGlobe_client/style/modules/buttons/button.less
+++ b/HistoGlobe_client/style/modules/buttons/button.less
@@ -24,6 +24,11 @@
   background-color: @color_highlight_active;
 }
 
+.button-horizotal
+{
+  float: left;
+}
+
 .own-button
 {
   width: 100%;
@@ -32,3 +37,5 @@
   background-repeat: no-repeat;
   background-size: 90% auto;
 }
+
+
