--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -5,7 +5,7 @@
 @import "areas/areas.less";
 @import "globe/globe.less";
 @import "watermark/watermark.less";
-@import "buttons/control_buttons.less";
+@import "buttons/button_area.less";
 @import "buttons/button.less";
 @import "help/help.less";
 @import "utils/bootstrap_overides.less";
