implemented abort button and integrated into workflow, deactivate operation buttons in operation

--- a/HistoGlobe_client/style/modules/buttons/button.less
+++ b/HistoGlobe_client/style/modules/buttons/button.less
@@ -24,6 +24,15 @@
   background-color: @color_highlight_active;
 }
 
+.button-abort
+{
+  width: @button_diameter * @button_abort_shrink_factor;
+  height: @button_diameter * @button_abort_shrink_factor;
+  border-radius: @button_diameter * @button_abort_shrink_factor * 0.5;
+  font-size: @button_diameter * @button_abort_shrink_factor * @widget_font_size_factor;
+  background-color: transparent;
+}
+
 .button-horizotal
 {
   float: left;
