--- a/HistoGlobe_client/style/modules/edit_operations/edit_operation_window.less
+++ b/HistoGlobe_client/style/modules/edit_operations/edit_operation_window.less
@@ -47,7 +47,7 @@
 #backButton, #nextButton
 {
   position: absolute;
-  top: (@operation_workflow_height + @operation_title_height) * 0.5; /* random magic factor */
+  top: (@operation_workflow_height + @operation_title_height) * 0.5;
 }
 #backButton
 {
@@ -56,4 +56,11 @@
 #nextButton
 {
   right: -@button_diameter - 10px;
+}
+
+#abortButton
+{
+  position: absolute;
+  top: 3px;
+  right: 5px;
 }
