changed naming scheme of styles, of elements in hgInstance and direct assignment of member variables in function parameter list

--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -1,16 +1,25 @@
 //////////////////////// INCLUDES //////////////////////////////////////////////
-@import "hivents/hivents.less";
-@import "sidebar/sidebar.less";
-@import "screenspace/screenspace.less";
-@import "areas/areas.less";
-@import "globe/globe.less";
-@import "watermark/watermark.less";
-@import "buttons/button_area.less";
-@import "buttons/button.less";
-@import "help/help.less";
+@import "areas/Areas.less";
+@import "buttons/Button.less";
+@import "buttons/ButtonArea.less";
+@import "edit_mode/ChangeOperationWorkflow.less";
+@import "globe/Globe.less";
+@import "help/Help.less";
+@import "hivent_list/HiventList.less";
+@import "hivents/HiventInfo.less";
+@import "hivents/HiventLabel.less";
+@import "hivents/HiventMarker.less";
+@import "hivents/HiventStory.less";
+@import "imprint/Imprint.less";
+@import "screenspace/Screenspace.less";
+@import "screenspace/Title.less";
+@import "screenspace/TitleImage.less";
+@import "search_box/SearchBox.less";
+@import "sidebar/Sidebar.less";
+// todo: sidebar widgets
+@import "utils/Gallery.less";
+@import "watermark/Watermark.less";
+
+@import "areas/leaflet_labels_override.less";
+@import "hivents/marker_cluster_override.less";
 @import "utils/bootstrap_overides.less";
-@import "utils/gallery.less";
-@import "search_box/search_box.less";
-@import "hivent_list/hivent_list.less";
-@import "imprint/imprint.less";
-@import "edit_mode/change_operation_workflow.less";
