implement StateVar helper class and reordered modules and init list

--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -5,7 +5,7 @@
 @import "edit_mode/ChangeOperationWorkflow.less";
 @import "globe/Globe.less";
 @import "help/Help.less";
-@import "hivent_list/HiventList.less";
+@import "hivents/HiventList.less";
 @import "hivents/HiventInfo.less";
 @import "hivents/HiventLabel.less";
 @import "hivents/HiventMarker.less";
