--- a/HistoGlobe_client/style/modules/edit_mode/ChangeOperationWorkflow.less
+++ b/HistoGlobe_client/style/modules/edit_mode/ChangeOperationWorkflow.less
@@ -5,7 +5,7 @@
   bottom: @timeline_height + 3px;
   border: @operation_window_border solid @color_bg_dark;
   border-radius: 10px;
-  background-color: @color_bg_white;
+  background-color: @color_white;
 }
 
 #operation-title
@@ -15,7 +15,7 @@
   background-color: @color_bg_dark;
   text-align: center;
   font-size: @operation_title_size;
-  color: @color_bg_white;
+  color: @color_white;
   line-height: @operation_title_height;   /* vertical centering */
 }
 
@@ -25,7 +25,7 @@
   height: @operation_workflow_height;
   background-color: @color_bg_medium;
   font-size: @operation_workflow_size;
-  color: @color_bg_white;
+  color: @color_white;
   text-align: center;
   vertical-align: bottom;
 }
