--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -3,6 +3,7 @@
 @import "buttons/Button.less";
 @import "buttons/ButtonArea.less";
 @import "edit_mode/ChangeOperationWorkflow.less";
+@import "edit_mode/EditMode.less";
 @import "globe/Globe.less";
 @import "help/Help.less";
 @import "hivents/HiventList.less";
@@ -12,8 +13,6 @@
 @import "hivents/HiventStory.less";
 @import "imprint/Imprint.less";
 @import "screenspace/Screenspace.less";
-@import "screenspace/Title.less";
-@import "screenspace/TitleImage.less";
 @import "search_box/SearchBox.less";
 @import "sidebar/Sidebar.less";
 // todo: sidebar widgets
