--- a/HistoGlobe_client/style/modules/buttons/ButtonArea.less
+++ b/HistoGlobe_client/style/modules/buttons/ButtonArea.less
@@ -1,30 +1,37 @@
+.buttons-group
+{
+}
+
 .buttons-bottom-left
 {
   position: absolute;
   bottom: 100px;
-  left: 15px;
+  left: @element_window_distance;
+  .button
+  {
+    margin-left: 0;
+    margin-bottom: 0;
+  }
 }
 
 .buttons-top-right
 {
   position: absolute;
-  top: 15px;
-  right: 15px;
-}
-
-.buttons-group
-{
-  margin: 5px 5px 5px 0;
+  top: @element_window_distance;
+  right: @element_window_distance;
+  .button
+  {
+    margin-top: 0;
+    margin-right: 0;
+  }
 }
 
 .buttons-group-horizontal
 {
   float: left;
-  margin-left: 10px;
   .button-horizontal
   {
     float: left;
-    margin-left: 5px;
   }
 }
 
