--- a/HistoGlobe_client/style/modules/watermark/Watermark.less
+++ b/HistoGlobe_client/style/modules/watermark/Watermark.less
@@ -1,7 +1,8 @@
 .watermark {
     position: absolute;
+    top: @element_window_distance;
+    left: @element_window_distance;
     // background-color: #fc0;
-    padding: 8px;
     // pointer-events:none;
     // color: #fff;
     // text-shadow: 1px 1px 1px #000;
