cleaned up timeline

--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -16,6 +16,10 @@
 @import "search_box/SearchBox.less";
 @import "sidebar/Sidebar.less";
 // todo: sidebar widgets
+@import "timeline/HistoGraph.less";
+@import "timeline/NowMarker.less";
+@import "timeline/Timeline.less";
+@import "timeline/ZoomButtonsTimeline.less";
 @import "utils/Gallery.less";
 @import "watermark/Watermark.less";
 
