hide and show canvas of HistoGraph now, moving the controlButtons up and down, de-activating HistoGraph onClick on area or rest of interface

--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -5,6 +5,7 @@
 @import "edit_mode/ChangeOperationWorkflow.less";
 @import "edit_mode/EditMode.less";
 @import "globe/Globe.less";
+@import "gui/popover.less";
 @import "help/Help.less";
 @import "hivents/HiventList.less";
 @import "hivents/HiventInfo.less";
