--- a/HistoGlobe_client/style/modules/timeline/HistoGraph.less
+++ b/HistoGlobe_client/style/modules/timeline/HistoGraph.less
@@ -1,9 +1,10 @@
 #histograph
 {
   position: absolute;
-  bottom: 0;
+  z-index: 20;
   width: 100%;
   height: @histograph_height;
+  bottom: @timeline_height;
   background-color: @color_bg_medium;
   border: 2px solid @color_bg_dark;
 }
