documented button area and put histograph into own module

--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -7,6 +7,7 @@
 @import "globe/Globe.less";
 @import "gui/popover.less";
 @import "help/Help.less";
+@import "histograph/HistoGraph.less";
 @import "hivents/HiventList.less";
 @import "hivents/HiventInfo.less";
 @import "hivents/HiventLabel.less";
@@ -17,7 +18,6 @@
 @import "search_box/SearchBox.less";
 @import "sidebar/Sidebar.less";
 // todo: sidebar widgets
-@import "timeline/HistoGraph.less";
 @import "timeline/NowMarker.less";
 @import "timeline/Timeline.less";
 @import "timeline/ZoomButtonsTimeline.less";
