added transparent line in histograph

--- a/HistoGlobe_client/style/modules/histograph/HistoGraph.less
+++ b/HistoGlobe_client/style/modules/histograph/HistoGraph.less
@@ -8,3 +8,16 @@
   background-color: @color_bg_medium;
   border: 2px solid @color_bg_dark;
 }
+
+#histograph-line
+{
+  position: relative;
+  z-index: 90;
+  height: 100%;
+  width: @histograph_line_width;
+  margin-left: auto;      /* centering div */
+  margin-right: auto;
+  left: -@histograph_line_width/2;
+  background-color: @color_bg_dark;
+  opacity: 0.5;
+}
