cleaned up impring css

--- a/HistoGlobe_client/style/modules/imprint/Imprint.less
+++ b/HistoGlobe_client/style/modules/imprint/Imprint.less
@@ -1,4 +1,5 @@
-#imprint-link {
+#imprint-link
+{
   position: absolute;
   bottom: 0;
   right: 0;
@@ -10,7 +11,8 @@
   cursor: pointer;
 }
 
-#imprint-overlay {
+#imprint-overlay
+{
   position: absolute;
   top: 0;
   right: 0;
@@ -23,7 +25,8 @@
   z-index: 999;
 }
 
-#imprint-box {
+#imprint-box
+{
   margin: 0 auto;
   margin-top: 50px;
   width: @imprint_width;
@@ -66,5 +69,4 @@
     font-family: @primary_font_face;
     font-size: 1.2em;
   }
-
 }
