updates country history in HistoGraph

--- a/HistoGlobe_client/style/modules/histograph/HistoGraph.less
+++ b/HistoGlobe_client/style/modules/histograph/HistoGraph.less
@@ -26,3 +26,29 @@
   height: 100%;
   bottom: 0;
 }
+
+
+// -----------------------------------------------------------------------------
+// COUNTRY HISTORY
+
+.graph-country-line
+{
+  stroke-width: 5px;
+  stroke: @color_white;
+}
+
+.graph-country-label
+{
+  font-face: @primary_font_face;
+  fill: @color_white;
+}
+
+.graph-hivent
+{
+  fill: @color_white;
+}
+
+.graph-hivent-name
+{
+
+}
