repositioned change operation window, adapted to new design

--- a/HistoGlobe_client/style/modules/edit_mode/EditMode.less
+++ b/HistoGlobe_client/style/modules/edit_mode/EditMode.less
@@ -13,7 +13,7 @@
 {
   position: absolute;
   top: 0;
-  left: @element_window_distance + @logo_width;
+  left: @element_window_distance + @logo_width + @title_distance_horizontal;
   height: 2*@element_window_distance + @logo_height;
   text-align: center;
   line-height: 2*@element_window_distance + @logo_height;
