--- a/HistoGlobe_client/style/modules/edit_mode/ChangeOperationWorkflow.less
+++ b/HistoGlobe_client/style/modules/edit_mode/ChangeOperationWorkflow.less
@@ -1,53 +1,58 @@
-#operation-main-window
+#change-operation-main-window
 {
   position: absolute;
-  left: 50%;
-  bottom: @timeline_height + 3px;
-  border: @operation_window_border solid @color_bg_dark;
-  border-radius: 10px;
-  background-color: @color_white;
+  top: 0;
 }
 
-#operation-title
+#change-operation-workflow-wrapper
 {
+  /* align with hg title (same height, no background) */
   width: 100%;
-  height: @operation_title_height;
-  background-color: @color_bg_dark;
-  text-align: center;
-  font-size: @operation_title_size;
-  color: @color_white;
-  line-height: @operation_title_height;   /* vertical centering */
+  height: 2*@element_window_distance + @logo_height;
 }
 
-#operation-workflow
+#change-operation-description-wrapper
 {
+  /* underneath hg title (take rest of height of main window, semi-transparent background) */
   width: 100%;
-  height: @operation_workflow_height;
+  height: @operation_window_height - (2*@element_window_distance + @logo_height);
+
   background-color: @color_bg_medium;
+  opacity: 0.5;
+}
+
+.co-workflow-row
+{
+  float:  left;
+  height: 2*@element_window_distance + @logo_height;
+}
+.co-description-row
+{
+  float:  left;
+  height: @operation_window_height - (2*@element_window_distance + @logo_height);
+}
+
+.co-button-col
+{
+  width: @button_diameter + @element_window_distance;
+}
+.co-step-col
+{
+  width: @operation_step_width;
+}
+
+.co-description-cell
+{
   font-size: @operation_workflow_size;
   color: @color_white;
   text-align: center;
   vertical-align: bottom;
 }
 
-#operation-content
-{
-  width: 100%;
-  height: @operation_entry_height;
-  font-size: 1.5em;
-}
-
-.operation-step
-{
-  float: left;
-  width: @operation_step_width;
-  height: 100%;
-}
-
+/*
 #backButton, #nextButton
 {
   position: absolute;
-  top: (@operation_workflow_height + @operation_title_height) * 0.5;
 }
 #backButton
 {
@@ -64,3 +69,4 @@
   top: 3px;
   right: 5px;
 }
+*/
