styled and designed around, now actually coding functionality

--- a/HistoGlobe_client/style/modules/buttons/ButtonArea.less
+++ b/HistoGlobe_client/style/modules/buttons/ButtonArea.less
@@ -54,7 +54,12 @@
 
 #controlButtons
 {
-  bottom: 50px;
+  bottom: @timeline_height;
+}
+
+.spacer
+{
+  margin: @element_window_distance / 2;
 }
 
 .highContrast .button-area   {
