--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -2,8 +2,8 @@
 @import "areas/Areas.less";
 @import "buttons/Button.less";
 @import "buttons/ButtonArea.less";
-@import "edit_mode/ChangeOperationWorkflow.less";
-@import "edit_mode/EditMode.less";
+@import "edit_mode/ChangeOperationWindow.less";
+@import "edit_mode/EditButtons.less";
 @import "globe/Globe.less";
 @import "gui/popover.less";
 @import "help/Help.less";
