--- a/HistoGlobe_client/style/modules/edit_mode/EditButtons.less
+++ b/HistoGlobe_client/style/modules/edit_mode/EditButtons.less
@@ -5,8 +5,7 @@
   left: 0;
   width: 100%;
   height: 2*@element_window_distance + @logo_height;
-  background-color: @color_bg_medium;
-  opacity: 0.5;
+  background-color: @color_bg_medium_semitransparent;
 }
 
 #hg-title
