first step in change operation workflow works

--- a/HistoGlobe_client/style/modules/edit_mode/ChangeOperationWindow.less
+++ b/HistoGlobe_client/style/modules/edit_mode/ChangeOperationWindow.less
@@ -34,6 +34,7 @@
 .co-button-col
 {
   width: @button_diameter + @element_window_distance;
+  margin-top: -5px;
 }
 .co-step-col
 {
@@ -42,7 +43,6 @@
 
 .co-description-cell
 {
-  font-size: @operation_workflow_size;
   color: @color_white;
   text-align: center;
   vertical-align: bottom;
