implemented structure of territory tools - took ages because of css positioning

--- a/HistoGlobe_client/style/modules/buttons/ButtonArea.less
+++ b/HistoGlobe_client/style/modules/buttons/ButtonArea.less
@@ -52,14 +52,10 @@
   }
 }
 
-#controlButtons
-{
-  bottom: @timeline_height;
-}
-
 .spacer
 {
-  margin: @element_window_distance / 2;
+  float: left;
+  margin: @element_window_distance;
 }
 
 .highContrast .button-area   {
