--- a/HistoGlobe_client/style/modules/hivents/HiventList.less
+++ b/HistoGlobe_client/style/modules/hivents/HiventList.less
@@ -1,37 +1,25 @@
 @hg_grey: #575756;  //HistoGlobe dunkelgrau
 @hg_green: #d5c900; //HistoGlobe gelbgrün
 
-.switch-off, .switch-on{
-  width: 30px;
-  height: 18px;
+#knopp
+{
   position: absolute;
   top: 12px;
   right: 12px;
-  border-radius: 0px;
-}
-.switch-off {
-  background-image: url("../config/school/icons/switch/switch-off.svg");
 }
 
-.switch-on{
-  background-image: url("../config/school/icons/switch/switch-on.svg");
-}
-
-.toggle_on_off {
-  float: right;
-  padding: 4px;
-}
-
-.display_on {
+.display-on
+{
   max-height: 71px;
   display: block;
 }
-
-.display_off {
+.display-off
+{
   max-height: 0px;
   overflow: hidden;
   display: block;
 }
+
 
 .hivent-list-module {
   z-index: 10;
@@ -233,7 +221,7 @@
           padding: 5px;
           border-bottom: solid 1px #ddd;
           overflow: hidden;
-          text-overflow: ellipsis; 
+          text-overflow: ellipsis;
 
           .wrap {
             float: right;
@@ -254,8 +242,8 @@
               float:right;
               color: #898888;
             }
-          }       
-        
+          }
+
           i {
             color: #2579bf;
             margin-right: 5px;
