--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -24,6 +24,7 @@
 @import "timeline/Timeline.less";
 @import "timeline/ZoomButtonsTimeline.less";
 @import "utils/Gallery.less";
+@import "utils/Switch.less";
 @import "watermark/Watermark.less";
 
 @import "areas/leaflet_labels_override.less";
