--- a/HistoGlobe_client/style/modules/edit_mode/ChangeOperationWindow.less
+++ b/HistoGlobe_client/style/modules/edit_mode/ChangeOperationWindow.less
@@ -18,6 +18,7 @@
   height: @operation_window_height - (2*@element_window_distance + @logo_height);
 
   background-color: @color_bg_medium_semitransparent; /*@color_bg_medium;*/
+  border-radius: 0 0 @border_radius @border_radius;
 }
 
 .co-workflow-row
@@ -48,24 +49,7 @@
   vertical-align: bottom;
 }
 
-/*
-#coBack, #coNext
+#next-button-parent
 {
-  position: absolute;
+  padding-left: 4px;
 }
-#coBack
-{
-  left: -@button_diameter - 10px;
-}
-#coNext
-{
-  right: -@button_diameter - 10px;
-}
-
-#coAbort
-{
-  position: absolute;
-  top: 3px;
-  right: 5px;
-}
-*/
