new logic in edit mode -> very logical setup/cleanup logic for UI elements now ;)

--- a/HistoGlobe_client/style/modules/buttons/Button.less
+++ b/HistoGlobe_client/style/modules/buttons/Button.less
@@ -13,7 +13,7 @@
   cursor: pointer;
 }
 
-.button-disabled, .button-diabled-active
+.button-disabled, .button-disabled-active
 {
   cursor: auto;
   pointer-events: none;   /*disables tooltip*/
