--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -3,10 +3,10 @@
 @import "buttons/Button.less";
 @import "buttons/ButtonArea.less";
 @import "control_buttons/ControlButtons.less";
-@import "edit_mode/ChangeOperationWindow.less";
-@import "edit_mode/EditButtons.less";
+@import "edit_mode/WorkflowWindow.less";
 @import "edit_mode/TerritoryTools.less";
 @import "globe/Globe.less";
+@import "gui/Title.less";
 @import "gui/popover.less";
 @import "help/Help.less";
 @import "histograph/HistoGraph.less";
