--- a/HistoGlobe_client/style/modules/gui/Title.less
+++ b/HistoGlobe_client/style/modules/gui/Title.less
@@ -8,7 +8,7 @@
   background-color: @color_bg_medium_semitransparent;
 }
 
-#hg-title
+#title
 {
   position: absolute;
   top: 0;
@@ -18,10 +18,4 @@
   line-height: 2*@element_window_distance + @logo_height;
   font-size: 2em;
   color: @color_white;
-}
-
-#newHiventButton
-{
-  margin-left: @button_diameter/2;
-  margin-right: @button_diameter/2;
 }
