started working on new country label -> it is hard

--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -5,6 +5,7 @@
 @import "control_buttons/ControlButtons.less";
 @import "edit_mode/WorkflowWindow.less";
 @import "edit_mode/TerritoryTools.less";
+@import "edit_mode/NewCountryLabel.less";
 @import "globe/Globe.less";
 @import "gui/Title.less";
 @import "gui/popover.less";
