cleaned up the project from unnecessary files

--- a/HistoGlobe_client/style/HistoGlobe.less
+++ b/HistoGlobe_client/style/HistoGlobe.less
@@ -6,6 +6,7 @@
 @import "../build/config.less";
 
 @import "modules/modules.less";
+@import "util/util.less";
 
 
 ///////////////////////// LAYOUT /////////////////////////
