--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -1,12 +1,12 @@
 //////////////////////// INCLUDES //////////////////////////////////////////////
 @import "areas/Areas.less";
-@import "buttons/Button.less";
-@import "buttons/ButtonArea.less";
 @import "control_buttons/ControlButtons.less";
 @import "edit_mode/WorkflowWindow.less";
 @import "edit_mode/TerritoryTools.less";
 @import "edit_mode/NewCountryLabel.less";
 @import "globe/Globe.less";
+@import "gui/Button.less";
+@import "gui/ButtonArea.less";
 @import "gui/Title.less";
 @import "gui/popover.less";
 @import "help/Help.less";
@@ -17,17 +17,10 @@
 @import "hivents/HiventMarker.less";
 @import "hivents/HiventStory.less";
 @import "imprint/Imprint.less";
-@import "screenspace/Screenspace.less";
 @import "search_box/SearchBox.less";
-@import "sidebar/Sidebar.less";
-// todo: sidebar widgets
 @import "timeline/NowMarker.less";
 @import "timeline/Timeline.less";
-@import "timeline/ZoomButtonsTimeline.less";
-@import "utils/Gallery.less";
-@import "utils/Switch.less";
 @import "watermark/Watermark.less";
 
 @import "areas/leaflet_labels_override.less";
 @import "hivents/marker_cluster_override.less";
-@import "utils/bootstrap_overides.less";
