--- a/HistoGlobe_client/style/modules/edit_mode/NewCountryLabel.less
+++ b/HistoGlobe_client/style/modules/edit_mode/NewCountryLabel.less
@@ -2,8 +2,8 @@
 {
   display: inline-block;
   position: absolute;
-  left: 20%;
-  top: 50%;
+  left: 500px;
+  top: 200px;
   margin: 0;
   padding: 0 @border_radius;
   border: 0;
