hacked elegantly existing buttons into HG.Buttons and defined onhover for buttons to see if they are active

--- a/HistoGlobe_client/style/modules/edit_mode/NewCountryTerritory.less
+++ b/HistoGlobe_client/style/modules/edit_mode/NewCountryTerritory.less
@@ -1,3 +1,19 @@
+#newTerritoryButtons
+{
+  top: 88px;
+}
+
+/* hacky hacky hacky */
+#leaflet-new-button-action
+{
+  margin-top: 83px;
+}
+#leaflet-edit-button-action
+{
+  margin-top: 73px;
+}
+
+
 /*** OLD CODE
 
 #tt-wrapper
