--- a/HistoGlobe_client/style/modules/edit_mode/leaflet_control_override.less
+++ b/HistoGlobe_client/style/modules/edit_mode/leaflet_control_override.less
@@ -1,6 +1,6 @@
-.leaflet-control-container
+/* hacky hacky hacky */
+
+.leaflet-draw-actions
 {
-  top: 74px;
-  position: absolute;
-  right: 0px;
+  margin-right: 26px;
 }
