--- a/HistoGlobe_client/style/modules/gui/ButtonArea.less
+++ b/HistoGlobe_client/style/modules/gui/ButtonArea.less
@@ -54,8 +54,8 @@
 
 .spacer
 {
-  float: left;
-  margin: @element_window_distance;
+  width: @element_window_distance;
+  height: @element_window_distance;
 }
 
 .highContrast .button-area   {
