milestone! reorganised AreasOnMap and EditMode in a way that it can serve all different kinds of selection and focus modi and states of areas and colors them correctly. Great work today!

--- a/HistoGlobe_client/style/modules/edit_mode/WorkflowWindow.less
+++ b/HistoGlobe_client/style/modules/edit_mode/WorkflowWindow.less
@@ -17,7 +17,7 @@
   width: 100%;
   height: @operation_window_height - (2*@element_window_distance + @logo_height);
 
-  background-color: @color_bg_medium_semitransparent; /*@color_bg_medium;*/
+  background-color: @color_bg_medium_semitransparent;
   border-radius: 0 0 @border_radius @border_radius;
 }
 
