again and again get EditMode to work with a new logic, now just get it through this time without redesigning!

--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -2,8 +2,8 @@
 @import "areas/Areas.less";
 @import "control_buttons/ControlButtons.less";
 @import "edit_mode/WorkflowWindow.less";
-@import "edit_mode/NewCountryTerritory.less";
-@import "edit_mode/NewCountryLabel.less";
+@import "edit_mode/NewGeometryTool.less";
+@import "edit_mode/NewNameTool.less";
 @import "globe/Globe.less";
 @import "gui/Button.less";
 @import "gui/ButtonArea.less";
